<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dahsboard"
    android:padding="16dp"
    tools:context=".complainform">

  <Spinner
      android:id="@+id/spinnerComplaintType"
      android:layout_width="385dp"
      android:layout_height="59dp"
      android:entries="@array/complaint_types"
      android:prompt="@string/complaint_type_prompt"
      android:spinnerMode="dropdown" />

  <EditText
      android:id="@+id/editTextComplaintDate"
      android:layout_width="385dp"
      android:layout_height="77dp"
      android:hint="@string/complaint_date_hint" />

  <EditText
      android:id="@+id/editTextComment"
      android:layout_width="381dp"
      android:layout_height="84dp"
      android:hint="@string/comment_hint" />

  <Button
      android:id="@+id/btn"
      android:layout_width="383dp"
      android:layout_height="104dp"
      android:text="Submit"
      android:textColor="@color/lightpurp"
      android:textSize="20sp"
      android:textStyle="bold" />

</LinearLayout>
